styles.css
.attribution { 
    font-size: 11px; 
    text-align: center;
}

.attribution a { 
    color: hsl(228, 45%, 44%); 
}

*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid black; */
}

html {
    height: 100%;
    width: 100%;
}

body {
    height: 100%;
    width: 100%;
    font-family: Montserrat;
    font-size: 14px;
    background-color: hsl(30, 38%, 92%);
    display: flex;
    justify-content:space-between;
    flex-direction: column;
    padding: 2em 1em;
}

.container {
    background-color: hsl(0, 0%, 100%);
    display: flex;
    flex-wrap: wrap;
}

.image-container img{
    object-fit: cover;
    width: 100%;
    border-radius: 7px 7px 0 0;
}

.text-container {
    padding: 1em;
    border-radius: 0 0 7px 7px;
}

h1, 
.price {
    margin: 0.5rem auto;
}

.new-price {
    color: hsl(158, 36%, 37%);
    margin-right: 1rem;
}

.add-to-cart {
    background-color: hsl(158, 36%, 37%);
    color: hsl(0, 0%, 100%);
    justify-content: center;
    padding: 1em;
    border-radius:7px;
}

.add-to-cart:hover {
    background-color: hsl(200, 36%, 37%);
}

h1, 
.new-price {
    font-family: Fraunces;
    font-weight: 700;
    font-size: 2rem;
}

.price, 
.add-to-cart {
    display: flex;
    align-items: center;
}

@media only screen and (min-width: 768px) {
    *,
    *::after,
    *::before {
        /* border: 1px solid black; */
    }

    .container {
        margin: auto;
        width: 50%
    }

    .image-container,
    .text-container {
        width: 50%;
    }

    .image-container img {
        height: 100%;
        border-radius: 7px 0 0 7px;
    }

    .text-container {
        padding:2em;
        border-radius: 0 7px 7px 0;
    }

    h1,
    .price {
        margin: 0.8rem auto;
    }

    .add-to-cart {
        padding: 0.7em;
    }

    .price {
        flex-wrap: wrap;
    }
}

@media only screen and (min-width: 1440px) {
    body {
        font-size: 1.3rem;
    }

    h1,
    .new-price {
        font-size: 2.6rem;
    }
}

